added new speaker nd media partner

--- a/speakers.html
+++ b/speakers.html
@@ -127,7 +127,6 @@
                         <a href="assets/pages/img/Logo/Dr. Lam Man Kee.jpeg" class="fancybox-button" title="Dr. Lam Man Kee" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                       <a class="recent-work-description" href="javascript:;">
                         <strong>Dr. Lam Man Kee</strong>
-                        <b>Senior Lecturer</b><br>
                         <b>Chemical Engineering Department,</b><br>
                         <b>Universiti Teknologi PETRONAS</b><br>
                       </a>
@@ -142,6 +141,17 @@
             <div class="owl-carousel owl-carousel4">
               <div class="recent-work-item">
                 <em>
+                  <img src="assets/pages/img/Logo/ Dr. Redanna Pallu.jpeg" height="252" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
+                  <a href="https://uohyd.irins.org/profile/58639" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/ Dr. Redanna Pallu.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                <a class="recent-work-description" href="javascript:;">
+                  <strong> Dr. Redanna Pallu</strong>
+                  <b> Emeritus Professor</b><br>
+                  <b> University of Hyderabad</b><br>
+                </a>
+              </div>
+              <div class="recent-work-item">
+                <em>
                   <img src="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" height="252" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
                   <a href="https://newinti.edu.my/360/iResearch/FHLS.html" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
@@ -151,8 +161,65 @@
                   <b>Faculty of Life Sciences</b><br>
                   <b>INTI University, Malaysia</b><br>
                 </a>
+              </div>           
+              <div class="recent-work-item">
+                <em>
+                  <img src="assets/pages/img/Logo/Dr. Tharamani.jpeg" height="250" width="80" alt="Dr. Tharamani">
+                  <a href="https://www.iitrpr.ac.in/tharamani-cn" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Dr. Tharamani.jpeg" class="fancybox-button" title="Dr. Tharamani" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
+                </em>
+                <a class="recent-work-description" href="javascript:;">
+                  <strong>Dr. Tharamani</strong>
+                  <b>Professor &amp; Head<br>Department of Chemistry</b><br>
+                  <b>IIT -Ropar</b><br>
+				          <b>Panjab</b>
+                </a>
               </div>
-			<div class="recent-work-item">
+              <div class="recent-work-item">
+                <em>
+                  <img src="assets/pages/img/Logo/Dr. Mugesh.jpeg" height="250" width="80" alt="Dr. Mugesh.jpeg">
+				          <a href="https://www.mugesh-iisc.in/mugesh" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Dr. Mugesh.jpeg" class="fancybox-button" title="#" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
+				        </em><a class="recent-work-description" href="javascript:;">
+                  <strong>Dr. G. Mugesh</strong>
+                  <b>Professor<br>IPC Department Dean</b><br>
+				          <b>Division of Chemical Sciences</b><br>
+                  <b>Indian Institute of Science Bangalore</b><br>	  
+                </a>
+              </div>
+			  
+            </div>       
+          </div>
+		 </div>		  
+		  <div class="row recent-work margin-bottom-40">
+		   <div class="col-md-12">
+            <div class="owl-carousel owl-carousel4">
+              <div class="recent-work-item">
+                <em>
+                  <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Dr. DVR Saigopal">
+				  <a href="https://clusteruniversity.org/voice_chacellor_mess.html" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" class="fancybox-button" title="Dr. DVR Saigopal" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                <a class="recent-work-description" href="javascript:;">
+                  <strong>Dr. DVR Saigopal</strong>
+                  <b>Founder Vice Chancellor</b><br>
+				          <b>Cluster University</b><br>
+				          <b>Kurnool, Andhra Pradesh</b>     			
+                </a>
+              </div>
+              <div class="recent-work-item">
+                <em>
+                  <img src="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" height="250" width="80" alt="Dr.Subba Rao Gangi Setty">
+				        <a href="https://mcb.iisc.ac.in/research-single/subba-rao-gangi-setty" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" class="fancybox-button" title="Dr.Subba Rao Gangi Setty" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                <a class="recent-work-description" href="javascript:;">
+                  <strong>Dr.Subba Rao Gangi Setty</strong>
+                  <b>Professor</b><br>
+				          <b>Dep. of Microbiology & Cell Biology</b><br>
+				          <b>Indian Institute of Science</b><br>
+     			        <b>Bangalore, Karnataka</b>
+                </a>
+              </div>
+              <div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/Harish Barshilia.jpeg" height="250" width="80" alt="Dr.Harish Barshilia">
 				  <a href="https://www.nal.res.in/en/dr-harish-c-barshilia-fnae-fnasc " target="_blank"><i class="fa fa-link"></i></a>
@@ -174,67 +241,13 @@
                 </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Dr.P D Babu</strong>
-				          <b>Scientist </b><br>
-                  <b>UGC-DAE </b><br>
-				          <b>CSR, Mumbai Centre, Maharastra</b>
-                </a>
-              </div>              
-              <div class="recent-work-item">
-                <em>
-                  <img src="assets/pages/img/Logo/Dr. Tharamani.jpeg" height="250" width="80" alt="Dr. Tharamani">
-                  <a href="https://www.iitrpr.ac.in/tharamani-cn" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Dr. Tharamani.jpeg" class="fancybox-button" title="Dr. Tharamani" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
-                </em>
-                <a class="recent-work-description" href="javascript:;">
-                  <strong>Dr. Tharamani</strong>
-                  <b>Professor &amp; Head<br>Department of Chemistry</b><br>
-                  <b>IIT -Ropar</b><br>
-				          <b>Panjab</b>
-                </a>
-              </div>			  
-            </div>       
-          </div>
-		 </div>		  
-		  <div class="row recent-work margin-bottom-40">
-		   <div class="col-md-12">
-            <div class="owl-carousel owl-carousel4">
-			<div class="recent-work-item">
-                <em>
-                  <img src="assets/pages/img/Logo/Dr. Mugesh.jpeg" height="250" width="80" alt="Dr. Mugesh.jpeg">
-				          <a href="https://www.mugesh-iisc.in/mugesh" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Dr. Mugesh.jpeg" class="fancybox-button" title="#" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
-				  </em><a class="recent-work-description" href="javascript:;">
-                  <strong>Dr. G. Mugesh</strong>
-                  <b>Professor<br>IPC Department Dean</b><br>
-				          <b>Division of Chemical Sciences</b><br>
-                  <b>Indian Institute of Science Bangalore</b><br>	  
+				          <b> Center Director UGC-DAE</b><br>
+                  <b>CSR Mumbai Centre</b><br>
+				          <b>Maharastra</b>
                 </a>
               </div>
-			  <div class="recent-work-item">
-                <em>
-                  <img src="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" height="250" width="80" alt="Dr.Subba Rao Gangi Setty">
-				        <a href="https://mcb.iisc.ac.in/research-single/subba-rao-gangi-setty" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" class="fancybox-button" title="Dr.Subba Rao Gangi Setty" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
-                <a class="recent-work-description" href="javascript:;">
-                  <strong>Dr.Subba Rao Gangi Setty</strong>
-                  <b>Professor</b><br>
-				          <b>Dep. of Microbiology & Cell Biology</b><br>
-				          <b>Indian Institute of Science</b><br>
-     			        <b>Bangalore, Karnataka</b>
-                </a>
-              </div>
-			  <div class="recent-work-item">
-                <em>
-                  <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Dr. DVR Saigopal">
-				  <a href="https://clusteruniversity.org/voice_chacellor_mess.html" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" class="fancybox-button" title="Dr. DVR Saigopal" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
-                <a class="recent-work-description" href="javascript:;">
-                  <strong>Dr. DVR Saigopal</strong>
-                  <b>Founder Vice Chancellor</b><br>
-				          <b>Cluster University</b><br>
-				          <b>Kurnool, Andhra Pradesh</b>     			
-                </a>
-              </div>
+
+
 			 </div>
 			</div>		  
         </div>     
