--- a/sponsors.html
+++ b/sponsors.html
@@ -139,7 +139,19 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>    
+                            </div> 
+                            <div class="row recent-work margin-bottom-40">          
+                                <div class="col-md-12">
+                                    <div class="owl-carousel owl-carousel4">
+                                        <h1>Media Partner</h1>
+                                        <div class="recent-work-item">
+                                            <img src="assets/pages/img/Logo/Lab AtoZ.jpeg" width="300" alt="Lab A to Z">
+                                            <a class="recent-work-description" href="javascript:;">
+                                                <strong>Lab A to Z</strong>
+                                            </a>
+                                    </div>
+                                </div>
+                            </div>   
                         </div>
                     </div>
                 </div>
