--- a/speakers.html
+++ b/speakers.html
@@ -141,7 +141,7 @@
             <div class="owl-carousel owl-carousel4">
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/ Dr. Redanna Pallu.jpeg" height="252" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
+                  <img src="assets/pages/img/Logo/Dr. Redanna Pallu.jpeg" height="252" width="80" alt="Dr. Redanna Pallu">
                   <a href="https://uohyd.irins.org/profile/58639" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/ Dr. Redanna Pallu.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
