adde new speaker

--- a/speakers.html
+++ b/speakers.html
@@ -156,7 +156,7 @@
                   <a href="https://newinti.edu.my/360/iResearch/FHLS.html" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Prof. Dr. Jayanthi Barasarathi</strong>
+                  <strong>Dr. Jayanthi Barasarathi</strong>
                   <b>Associate Professor</b><br>
                   <b>Faculty of Life Sciences</b><br>
                   <b>INTI University, Malaysia</b><br>
@@ -196,14 +196,14 @@
             <div class="owl-carousel owl-carousel4">
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Dr. DVR Saigopal">
+                  <img src="assets/pages/img/Logo/Dr. Dhandapany Perundurai.jpeg" height="250" width="80" alt="Dr. Dhandapany Perundurai">
 				  <a href="https://clusteruniversity.org/voice_chacellor_mess.html" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" class="fancybox-button" title="Dr. DVR Saigopal" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                  <a href="assets/pages/img/Logo/Dr. Dhandapany Perundurai.jpeg" class="fancybox-button" title="Dr. Dhandapany Perundurai" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Dr. DVR Saigopal</strong>
-                  <b>Founder Vice Chancellor</b><br>
-				          <b>Cluster University</b><br>
-				          <b>Kurnool, Andhra Pradesh</b>     			
+                  <strong>Dr. Dhandapany Perundurai</strong>
+                  <b>Associate Professor and Scientist</b><br>
+				          <b>nstitute for Stem Cell Biology and Regenerative Medicine</b><br>
+				          <b> Bengaluru</b>     			
                 </a>
               </div>
               <div class="recent-work-item">
