added Conference poster

--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@
           <div class="col-md-4 col-sm-4">
             <div class="service-box-heading">
               <em><i class="fa fa-location-arrow blue"></i></em>
+			  <a class="carousel-btn-green" href="ICGTSTAS_24_poster.pdf" data-animation="animated fadeInUp"><span>Conference Poster</span></a>
+            </div>
+            
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <div class="service-box-heading">
+              <em><i class="fa fa-location-arrow blue"></i></em>
 			  <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp"><span>Program Schedule</span></a>
             </div>
             
