--- a/speakers.html
+++ b/speakers.html
@@ -202,7 +202,7 @@
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Dr. Dhandapany Perundurai</strong>
                   <b>Associate Professor and Scientist</b><br>
-				          <b>nstitute for Stem Cell Biology and Regenerative Medicine</b><br>
+				          <b>Institute for Stem Cell Biology and Regenerative Medicine</b><br>
 				          <b> Bengaluru</b>     			
                 </a>
               </div>
