added new sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -137,6 +137,12 @@
                                                 <strong>Kamaljeeth Instruments</strong>
                                             </a>
                                         </div>
+                                        <div class="recent-work-item">
+                                            <img src="assets/pages/img/Logo/vasa scientific co.jpg" width="300" alt="Vasa Scientific Co">
+                                            <a class="recent-work-description" href="javascript:;">
+                                                <strong>Vasa Scientific Co</strong>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
