chnaged inti uni to have  malasia

--- a/speakers.html
+++ b/speakers.html
@@ -159,7 +159,7 @@
                   <strong>Dr. Jayanthi Barasarathi</strong>
                   <b>Associate Professor</b><br>
                   <b>Faculty of Life Sciences</b><br>
-                  <b>INTI University, Malaysia</b><br>
+                  <b>INTI International University, Malaysia</b><br>
                 </a>
               </div>           
               <div class="recent-work-item">
