added extra text regarding confirmation mail

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <div class="main">
       <div class="container">
-        <marquee><b>NOTE:</b>***Selected and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***</marquee>
+        <marquee><b>NOTE:</b>***Selected and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***    <b>The acceptance mail for the registered participants will be sent very soon</b>    </marquee>
         
 		<!-- BEGIN SERVICE BOX -->   
     <div class="row service-box margin-bottom-40">
