--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <div class="main">
       <div class="container">
-        <marquee><b>NOTE:</b>***Selected and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***    <b>The acceptance mail for the registered participants will be sent very soon</b>    </marquee>
+        <marquee><pre><b>NOTE:</b>***Selected and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***    <b>The acceptance mail for the registered participants will be sent very soon</b>    </pre></marquee>
         
 		<!-- BEGIN SERVICE BOX -->   
     <div class="row service-box margin-bottom-40">
@@ -229,7 +229,7 @@
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
               <em><i class="fa fa-download blue"></i></em>
-              <a class="carousel-btn-green" href="ICGTSTAS_24_poster.pdf" data-animation="animated fadeInUp"><span>Conference Poster</span></a>
+              <a class="carousel-btn-green" href="ICGTSTAS_24_poster.pdf" target="_blank" data-animation="animated fadeInUp"><span>Conference Poster</span></a>
             </div>
           </div>
         </div>
