--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <div class="main">
       <div class="container">
-        <marquee><pre><b>NOTE:</b>***Selected and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***    <b>The acceptance mail for the registered participants will be sent very soon</b>    </pre></marquee>
+        <marquee><b>NOTE:</b>***Selected and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804*** <b> The acceptance mail for the registered participants will be sent very soon </b> </marquee>
         
 		<!-- BEGIN SERVICE BOX -->   
     <div class="row service-box margin-bottom-40">
@@ -222,28 +222,36 @@
         <div class="col-md-6">
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <em><i class="fa fa-files-o red"></i></em>
-              <a class="carousel-btn-green" href="ICGTSTAS_24_brochure.pdf" target="_blank" data-animation="animated fadeInUp"><span>Conference Brochure</span></a>
+              <a class="carousel-btn-green" href="ICGTSTAS_24_brochure.pdf" target="_blank" data-animation="animated fadeInUp">
+                <em><i class="fa fa-files-o red"></i></em>
+                <span>Conference Brochure</span>
+              </a>
             </div>            
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <em><i class="fa fa-download blue"></i></em>
-              <a class="carousel-btn-green" href="ICGTSTAS_24_poster.pdf" target="_blank" data-animation="animated fadeInUp"><span>Conference Poster</span></a>
+              <a class="carousel-btn-green" href="ICGTSTAS_24_poster.pdf" target="_blank" data-animation="animated fadeInUp">
+                <em><i class="fa fa-download blue"></i></em>
+                <span>Conference Poster</span>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <em><i class="fa fa-calendar orange"></i></em>
-              <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp"><span>Program Schedule</span></a>
+              <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp">
+                <em><i class="fa fa-calendar orange"></i></em>
+                <span>Program Schedule</span>
+              </a>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <em><i class="fa fa-tasks green"></i></em>
-              <a class="carousel-btn-green" href="application.html" data-animation="animated fadeInUp"><span>Application form</span></a>
+              <a class="carousel-btn-green" href="application.html" data-animation="animated fadeInUp">
+                <em><i class="fa fa-tasks green"></i></em>
+                <span>Application form</span>
+              </a>
             </div>
           </div>
         </div>
