--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="col-md-6">
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp">
+              <a class="carousel-btn-green" href="ICGTSTAS_24_schedule.pdf" data-animation="animated fadeInUp">
                 <em><i class="fa fa-calendar orange"></i></em>
                 <span>Program Schedule</span>
               </a>
