added university names

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                           "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
                         </p>
                         <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
-                          Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia
+                          Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia<br>SAN BEDA University, Philippines<br>and Pukyong National University, South Korea
                         </p>                        
                       </div>
                   </div>
@@ -152,7 +152,7 @@
                           "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
                         </p>
                         <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
-                          Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia
+                          Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia<br>SAN BEDA University, Philippines<br>and Pukyong National University, South Korea
                         </p>                        
                       </div>
                   </div>
@@ -172,7 +172,7 @@
                         "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
                       </p>
                       <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
-                        Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia
+                        Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia<br>SAN BEDA University, Philippines<br>and Pukyong National University, South Korea
                       </p>                        
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                         "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
                       </p>
                       <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
-                        Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia
+                        Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University, Malaysia<br>SAN BEDA University, Philippines<br>and Pukyong National University, South Korea
                       </p>                        
                     </div>
                 </div>
