added new sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -143,6 +143,12 @@
                                                 <strong>Vasa Scientific Co</strong>
                                             </a>
                                         </div>
+                                        <div class="recent-work-item">
+                                            <img src="assets/pages/img/Logo/labidia.jpg" width="300" alt="labidia">
+                                            <a class="recent-work-description" href="javascript:;">
+                                                <strong>Labindia analytical</strong>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
