corrected sponsor name

--- a/sponsors.html
+++ b/sponsors.html
@@ -146,7 +146,7 @@
                                         <div class="recent-work-item">
                                             <img src="assets/pages/img/Logo/labidia.jpg" width="300" alt="labidia">
                                             <a class="recent-work-description" href="javascript:;">
-                                                <strong>Labindia analytical</strong>
+                                                <strong>Lab India Chemicals</strong>
                                             </a>
                                         </div>
                                     </div>
