--- a/sponsors.html
+++ b/sponsors.html
@@ -143,6 +143,10 @@
                                                 <strong>Vasa Scientific Co</strong>
                                             </a>
                                         </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="owl-carousel owl-carousel4">
                                         <div class="recent-work-item">
                                             <img src="assets/pages/img/Logo/labidia.jpg" width="300" alt="labidia">
                                             <a class="recent-work-description" href="javascript:;">
