made consistent with other webpage

--- a/sponsors.html
+++ b/sponsors.html
@@ -145,6 +145,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row recent-work margin-bottom-40">
                                 <div class="col-md-12">
                                     <div class="owl-carousel owl-carousel4">
                                         <div class="recent-work-item">
