added report and souvenir

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="service-box-heading">
               <a class="carousel-btn-green" href="ICGTSTAS_24_brochure.pdf" target="_blank" data-animation="animated fadeInUp">
                 <em><i class="fa fa-files-o red"></i></em>
-                <span>Conference Brochure</span>
+                <span>ICGTSTAS 2024<br>Brochure</span>
               </a>
             </div>            
           </div>
@@ -232,7 +232,7 @@
             <div class="service-box-heading">
               <a class="carousel-btn-green" href="ICGTSTAS_24_poster.pdf" target="_blank" data-animation="animated fadeInUp">
                 <em><i class="fa fa-download blue"></i></em>
-                <span>Conference Poster</span>
+                <span>ICGTSTAS 2024<br>Poster</span>
               </a>
             </div>
           </div>
@@ -240,17 +240,17 @@
         <div class="col-md-6">
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <a class="carousel-btn-green" href="ICGTSTAS_24_schedule.pdf" target="_blank" data-animation="animated fadeInUp">
-                <em><i class="fa fa-calendar orange"></i></em>
-                <span>Program Schedule</span>
+              <a class="carousel-btn-green" href="ICGTSTAS_24_REPORT.pdf" target="_blank" data-animation="animated fadeInUp">
+                <em><i class="fa fa-tasks orange"></i></em>
+                <span>ICGTSTAS 2024<br>Report</span>
               </a>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="service-box-heading">
-              <a class="carousel-btn-green" href="application.html" data-animation="animated fadeInUp">
-                <em><i class="fa fa-tasks green"></i></em>
-                <span>Application form</span>
+              <a class="carousel-btn-green" href="ICGTSTAS_24_Souvenir.pdf" data-animation="animated fadeInUp">
+                <em><i class="fa fa-tags green"></i></em>
+                <span>ICGTSTAS 2024<br>Souvenir</span>
               </a>
             </div>
           </div>
